Transaction changes for UI support (#135)
* Corrects URL and updates packages

Signed-off-by: Matt Raffel <mattr@kiva.org>

* fixes message cracking

Signed-off-by: Matt Raffel <mattr@kiva.org>

* handles transaction message

Signed-off-by: Matt Raffel <mattr@kiva.org>

* noting complete status received

Signed-off-by: Matt Raffel <mattr@kiva.org>

* adds persistence layer to agents

Signed-off-by: Matt Raffel <mattr@kiva.org>

* fixes requirement for merkle trree

Signed-off-by: Matt Raffel <mattr@kiva.org>

* gets basic of reporting in

Signed-off-by: Matt Raffel <mattr@kiva.org>

* temporary change for demo until credential is fixed.

Signed-off-by: Matt Raffel <mattr@kiva.org>

* notes for what is next

Signed-off-by: Matt Raffel <mattr@kiva.org>

* debugging

Signed-off-by: Matt Raffel <mattr@kiva.org>

--- a/dummy.env
+++ b/dummy.env
@@ -8,6 +8,8 @@ AGENT_LOG_LENGTH=100
 # Should match the deployed environment's public url
 PUBLIC_URL=http://aries-guardianship-agency:3010
 
+ADMIN_API_KEY=adminApiKey
+
 # For postgres DB which hosts the wallets (should match old values from identity-wallet-service)
 WALLET_DB_HOST=wallets-db
 WALLET_DB_PORT=5432
@@ -15,6 +17,7 @@ WALLET_DB_USER=postgres
 WALLET_DB_PASS=dbpass
 WALLET_DB_ADMIN_USER=postgres
 WALLET_DB_ADMIN_PASS=dbpass
+WALLET_DB=wallets
 
 # These values are only used locally by docker-compose to set up the DB container - should match values above
 POSTGRES_PASSWORD=dbpass
