--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start:hmr": "node dist/server",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
-    "test": "node -r dotenv/config node_modules/.bin/jest --runInBand"
+    "test": "node -r dotenv/config node_modules/.bin/jest --runInBand",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm:migration": "node --require ts-node/register ./node_modules/typeorm/cli.js migration:create -d src/migration -n"
   },
   "dependencies": {
     "@kubernetes/client-node": "^0.14.0",
@@ -26,6 +28,7 @@
     "@nestjs/core": "^7.6.14",
     "@nestjs/platform-express": "^7.6.14",
     "@nestjs/swagger": "^4.7.16",
+    "@nestjs/typeorm": "^7.1.5",
     "@types/dockerode": "^3.2.2",
     "aries-controller": "^1.0.44",
     "cache-manager": "^3.4.1",
@@ -39,10 +42,12 @@
     "express-request-id": "^1.4.1",
     "helmet": "^4.4.1",
     "http-proxy-middleware": "^1.0.6",
-    "protocol-common": "^0.1.34",
+    "pg": "^8.5.1",
+    "protocol-common": "^0.1.37",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.31",
     "typescript": "^4.2.3",
     "ws": "^7.4.4"
   },
