Pro 2999 - support Infinity cache times (#140)
* support Infinity cache times

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* fix lint

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* update common and aries-controller

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* fix function signature after upgrade

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* setup better default cache ttl values

Signed-off-by: Jacob Saur <jsaur@kiva.org>

* handle infinite cache for multitenant too

Signed-off-by: Jacob Saur <jsaur@kiva.org>

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nestjs/swagger": "^4.7.16",
     "@nestjs/typeorm": "^7.1.5",
     "@types/dockerode": "^3.2.2",
-    "aries-controller": "^1.0.44",
+    "aries-controller": "1.0.53",
     "cache-manager": "^3.4.1",
     "cache-manager-fs-hash": "^0.0.9",
     "cache-manager-redis-store": "^2.0.0",
@@ -43,7 +43,7 @@
     "helmet": "^4.4.1",
     "http-proxy-middleware": "^1.0.6",
     "pg": "^8.5.1",
-    "protocol-common": "^0.1.37",
+    "protocol-common": "0.1.38",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
     "swagger-ui-express": "^4.1.6",
